fix button type

--- a/templates/app/oauth-authorize.html.twig
+++ b/templates/app/oauth-authorize.html.twig
@@ -124,7 +124,7 @@
       <div class="desc">
         {{ applicationName }} wants to access your <strong>thibault</strong> account
       </div>
-      <button type="button" class="button buttonBlue">Authorize {{ applicationName }}</button>
+      <button type="submit" class="button buttonBlue">Authorize {{ applicationName }}</button>
       <div class="redirect">
         Authorizing will redirect to<br />
         <strong>{{ redirectUri }}</strong>
