--- a/templates/app/oauth-authorize.html.twig
+++ b/templates/app/oauth-authorize.html.twig
@@ -120,7 +120,7 @@
   </head>
   <body>
     <hgroup>
-      <img src="https://lichess1.org/assets/favicon.svg" alt="lichess.org" class="logo" />
+      <img src="https://lichess1.org/assets/logo/lichess.svg" alt="lichess.org" class="logo" />
       <h1>Authorize {{ applicationName }}</h1>
     </hgroup>
     <form method="POST">
