replace with lidraughts names/scopes

--- a/templates/app/oauth-authorize.html.twig
+++ b/templates/app/oauth-authorize.html.twig
@@ -120,7 +120,7 @@
   </head>
   <body>
     <hgroup>
-      <img src="https://lichess1.org/assets/logo/lichess.svg" alt="lichess.org" class="logo" />
+      <img src="https://lidraughts.org/assets/piece/king-logo.svg" alt="lidraughts.org" class="logo" />
       <h1>Authorize {{ applicationName }}</h1>
     </hgroup>
     <form method="POST">
@@ -140,7 +140,7 @@
       <button type="submit" name="authorize" class="button buttonBlue">Authorize {{ applicationName }}</button>
     </form>
     <footer>
-      {{ applicationName }} is <strong>not</strong> owned or operated by <a href="https://lichess.org">lichess.org</a>
+      {{ applicationName }} is <strong>not</strong> owned or operated by <a href="https://lidraughts.org">lidraughts.org</a>
     </footer>
   </body>
 </html>
